# Words-Bin

./: AppSettings.h  CMakeLists.txt  CaptureTool.cpp  MainWindow.cpp  MainWindow.h  PACKAGING_STEPS_CN.md  README.md  RELEASE_NOTES_v0.1.0.md  SettingsDialog.cpp  TrayIcon.cpp  app_icon.rc  main.cpp  resources.qrc
